--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GDPR-Architect</title>
+    <title>GDPR-Pilot</title>
     <!-- Stili richiesti per il viewer -->
     <link
       rel="stylesheet"
